syntax = "proto3";
package jobworkerp.runner;

message GrpcUnaryArg {
    string path = 1;
    bytes request = 2;
}

